laid groundwork for prims algorithm

--- a/practice/SVGplotter/SVGplotterMain.html
+++ b/practice/SVGplotter/SVGplotterMain.html
@@ -13,7 +13,9 @@
         <!-- <div id="second-display"> -->
             
         <!-- </div> -->
-        <button id="input-edges" onclick="inputAdjacencyMatrix()"> Join Edge </button>
+        <button class="control-btn" onclick="inputAdjacencyMatrix()"> Enter Edges </button>
+        <button class="control-btn" onclick="createEdges()"> Join Edges </button>
+        <button class="control-btn" onclick="executeAlgorithm()"> Exexute Algorithm </button>
         
     </body>
 </html>
