added Kruskal's algorithm

--- a/practice/SVGplotter/SVGplotterMain.html
+++ b/practice/SVGplotter/SVGplotterMain.html
@@ -16,6 +16,12 @@
         <button class="control-btn" onclick="inputAdjacencyMatrix()"> Enter Edges </button>
         <button class="control-btn" onclick="createEdges()"> Join Edges </button>
         <button class="control-btn" onclick="executeAlgorithm()"> Exexute Algorithm </button>
+        <div id="algo-selector">
+            <input type = "radio"  name="algorithm" value = "Prim's" checked>Prim's</form>
+            <input type = "radio"  name="algorithm" value = "Kruskal's">Kruskal's</form>
+        </div>
+        
+
         
     </body>
 </html>
