--- a/practice/MSTvisualiserMain/MSTplotterMain.html
+++ b/practice/MSTvisualiserMain/MSTplotterMain.html
@@ -13,6 +13,14 @@
                 <button class="control-btn" onclick="executeAlgorithm()"><b> Exexute Algorithm</b> </button>
                 <button class="control-btn" id ="next-btn" ><b>Next Step</b></button>
             </div>
+            <div class="credits">
+                <b>
+                    By:<br>
+                    Utsav Manandhar<br>
+                    Subham Shrestha<br>
+                    Sudip Tiwari<br>
+                </b>
+            </div>
             <div class="selectors">
                 <div id="algo-selector">
                     <input type = "radio"  name="algorithm" value = "Prim's" checked><b>Prim's</b></form>
